Add boiler handler

--- a/config.json
+++ b/config.json
@@ -9,6 +9,12 @@
   "measurement_collector": {
     "refresh_interval": 5
   },
+  "boiler" : {
+    "ip": "127.0.0.1",
+    "port": 8002,
+    "relay_type": "high_enabled",
+    "gpio": 3
+  },
   "slaves": {
     "gora": {
       "ip": "192.168.68.102",
