--- a/config.json
+++ b/config.json
@@ -108,6 +108,8 @@
   "cesspool": {
     "ip": "192.168.68.111",
     "port": 8000,
-    "refresh_interval": 5
+    "refresh_interval": 5,
+    "history_keep_time_days": 30,
+    "history_save_interval_mins": 10
   }
 }
