--- a/data/settings.json
+++ b/data/settings.json
@@ -23,7 +23,7 @@
       "temperature": 20.0
     }
   },
-  "pokoj_pusty": {
+  "pokoj_poldusia": {
     "day": {
       "hour": 7,
       "minute": 0,
