--- a/data/settings_vacation.json
+++ b/data/settings_vacation.json
@@ -23,7 +23,7 @@
       "temperature": 18.5
     }
   },
-  "pokoj_pusty": {
+  "pokoj_poldusia": {
     "day": {
       "hour": 7,
       "minute": 0,
